# sec-trans

./: .gitignore  CMakeLists.txt
include/: codes.h  commands.h  common_defs.h  file.h  message.h
src/: client.c  file.c  message.c  server.c  test_client.c  test_server.c
